--- a/profile-card.css
+++ b/profile-card.css
@@ -88,7 +88,7 @@ hr {
 #bottom {
   width: 100%;
   height: 60%;
-  padding: 25px 50px 25px 50px;
+  padding: 25px;
 }
 
 #bottom span {
@@ -108,7 +108,7 @@ section span {
   font-size: 18px;
   color: hsl(227, 10%, 46%);
   font-weight: 400;
-  margin: 0px 15px;
+  margin: 10px 25px;
 }
 
 section p {
