--- a/profile-card.css
+++ b/profile-card.css
@@ -134,4 +134,8 @@ section p {
   body {
   background-position: -600px -600px, 250px 300px;
   }
+  
+  #container {
+    max-width: 360px;
+  }
 }
